tests/assert_bad_condition.stderr
tests/assert_bad_condition.sl:3:9: error: SL2009: expected bool expression
