tests/assert_bad_condition.sl
// Verifies assert bad condition.
fn Main() i32 {
	assert 1
	return 0
}
